--- a/wwr/index.html
+++ b/wwr/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <header>
-        <a"logo_link" href="index.html">
-            <img class="logo" scr="images/logo.png" alt=""Dry Oar Logo">
+        <a id="logo_link" href="index.html">
+            <img class="logo" scr="images/logo.png" alt="Dry Oar Logo">
         </a>
         <nav> 
             <a href="index.html">Home</a>
