--- a/dog/site-plan.html
+++ b/dog/site-plan.html
@@ -24,13 +24,13 @@
 
 
       <h3>Audience</h3>
-      <p>Owners in need of help with training their dog/dogs</p>  <!-- change this -->
+      <p>Any dog owners who have internet access and are looking to train their pet.</p>  <!-- change this -->
 
       <hr>
       <h2>Branding</h2>
       <h3>Website Logo</h3>
       <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-      <img src="images/logo.png" alt="Happy Tails Logo">
+      <img src="styles/images/logo.png" alt="Happy Tails Logo">
       <hr>
       <h2>
         Style Guide
