--- a/dog/site-plan.html
+++ b/dog/site-plan.html
@@ -50,7 +50,7 @@
       <table class="colors">
         <tr><th>Primary</th><th>Secondary</th><th>Accent 1</th><th>Accent 2</th></tr>
         <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
-        <tr><td class="primary">#0978A1</td><td class="secondary">#E8FBDE</td><td class="accent1">#96F061</td><td class="accent2"></td></tr>
+        <tr><td class="primary">#0978A1</td><td class="secondary">#DADDDF</td><td class="accent1">#96F061</td><td class="accent2"></td></tr>
       </table>
       https://coolors.co/236d9c-7ced3b-ffffff-96f061-eff2f4-7fed40-dadddf-8ba7b0
       <!-- ------------------------Step 9------------------------------ -->
