--- a/wwr/faq.html
+++ b/wwr/faq.html
@@ -46,6 +46,7 @@
         </section>
         <div id="background"></div>
         <img class="river1" src="images/river1.jpg">
+        <img class="wireframe" src="images/wireframe.png"
     </main>
     <footer>
         <p>Dry Oar &copy; 20xx - Alison Forsberg</p>
