--- a/wwr/faq.html
+++ b/wwr/faq.html
@@ -1,8 +1,17 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <link rel="stylesheet" href="styles/style.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Whitewater Rafting Vacations - Dry Oar Boating - FAQ</title>
+</head>
 <body>
     <div id="header">
          <h1 class="home-title">FAQ's</h1>
     </div id="header">
-    <main class="home-grid">
+    <main class="home-grid"></main>
         <section class="faq">
             <h2>
                 Is this a good trip for kids? What are the age ranges you allow?
@@ -24,6 +33,7 @@
                 We will provide all necessary camping equipment. This includes a sleeping bag, foam pad, waterproof duffle bag, small waterproof day bag, tent and a cot, eating utensils and camping chair.
                 We provided water and lemonade during the day. Coffee, tea and hot chocolate are provided during the morning and evening hours. You may bring beer, liquor and soft drinks (in reasonable amounts, 2 cans per day). You may purchase these items either the night before the trip, or on your way to the put-in. 3 meals per day, plus snacks
             </h3>
+        <img class="river1" src="images/river1.jpg">
             <h2> 
                 What do I need to bring?
             </h2>
@@ -45,7 +55,6 @@
             </h3>
         </section>
         <div id="background"></div>
-        <img class="river1" src="images/river1.jpg">
         <img class="wireframe" src="images/wireframe.png"
     </main>
     <footer>
