--- a/dog/site-plan.html
+++ b/dog/site-plan.html
@@ -183,19 +183,19 @@
       <p>         
         [Any additional details about home that the wireframe does not make clear]
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="styles/images/wireframe home.png" alt="home page wireframe">
 
-      <h3>[Page 2]</h3>
+      <h3>What You Need</h3>
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="styles/images/wireframe 2.png" alt="page 2 wireframe">
 
-      <h3>[Page 3]</h3>
+      <h3>FAQ</h3>
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="styles/images/wireframe 3.png" alt="page 3 wireframe">
     </main>
   </body>
 
