Starting last week assignment

--- a/dog/index.html
+++ b/dog/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/index.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -45,17 +45,17 @@
     </main>
     <footer>
         <p>Happy Tails &copy; 20xx - Alison Forsberg</p>
-        <p><a href="site-plan.css">Site Plan</a></p>
+        <p><a href="site-plan.html">Site Plan</a></p>
         <p><a href="contactus.html">Contact Us</a></p>
         <div class="social">
             <a href="https://facebook.com" target="_blank">
-                <img src="images/facebook.png" alt="fb icon">
+                <img src="styles/images/facebook.png" alt="fb icon">
             </a>
             <a href="https://twitter.com" target="_blank">
-                <img src="images/twitter.png" alt="twitter icon">
+                <img src="styles/images/twitter.png" alt="twitter icon">
             </a>
             <a href="https://instagram" target="_blank">
-                <img src="images/instagram.png" alt="instagram icon">
+                <img src="styles/images/instagram.png" alt="instagram icon">
             </a>
         </div>
     </footer>
