Really starting wireframe

--- a/dog/contactus.html
+++ b/dog/contactus.html
@@ -7,6 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Happy Tails Dog Training - Home</title>
 </head>
+    <nav>
+    <div class="btn-group">
+        <a href="index.html"><button>Home</button>
+        <a href="faq.html"><button>FAQ</button>
+        <a href="need.html"><button>What You Need</button>
+      </div>
+    </nav>
 <body>
     <div id="content">
     <header> 
