--- a/dog/need.html
+++ b/dog/need.html
@@ -14,9 +14,11 @@
             <img class="logo" src="styles/images/logo.png" alt="Happy Tails Logo">
         </a>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="faq.html">FAQ</a>
-            <a href="need.html">What You Need</a>
+        <div class="btn-group">
+            <a href="index.html"><button>Home</button>
+            <a href="faq.html"><button>FAQ</button>
+            <a href="need.html"><button>What You Need</button>
+        </div>
         </nav>
     </header>
     <div id="hero">
