--- a/dog/index.html
+++ b/dog/index.html
@@ -15,9 +15,9 @@
         </a>
         <nav>
         <div class="btn-group">
-            <a href="index.html"><button>Home</button>
-            <a href="faq.html"><button>FAQ</button>
-            <a href="need.html"><button>What You Need</button>
+            <a href="index.html"><button>Home</button></a>
+            <a href="faq.html"><button>FAQ</button></a>
+            <a href="need.html"><button>What You Need</button></a>
         </div>
         </nav>
     </header>
