--- a/dog/index.html
+++ b/dog/index.html
@@ -28,7 +28,7 @@
             <h4>Dog Training</h4>
         </section>
         <div id="hero-box">
-            <img class="bordercollie-img" src="styles/images/border collie.jpg" alt="Border Collie">
+            <img class="bordercollie" src="styles/images/border collie.jpg" alt="Border Collie">
         </div>
     </div>
     <main>
@@ -42,7 +42,7 @@
             Your dog is like that car, it is capable of so much. Man’s best friend can learn hundreds of words and can develop an intelligence up to a 2-year-old. If you send your dog off to a training school, they will learn but you won’t know how apply their knowledge. That’s why we would rather have the owner present than the dog. With these online lessons, you will better understand your pet and how to align their actions to your desires. You already have the metaphorical car, and we’re going to teach you how to drive.
         </p>
         <div>
-            <img class="dogface-img" src="styles/images/dog face.jpg" alt="Dog Face">
+            <img class="dogface" src="styles/images/dog face.jpg" alt="Dog Face">
         </div>
     </main>
     <footer>
