done with home page

--- a/dog/need.html
+++ b/dog/need.html
@@ -47,7 +47,7 @@
         </h4>
         <p>If you go into your training session expecting it to be bad, it will be. Dogs pick up on humans’ emotions, so if you are negative your dog knows it. We all have bad days, and if you find yourself having one, just spend a couple minutes working on commands your dog has already mastered. It will keep that time consistency while also making the session a success.</p>
         <div>
-            <img src="styles/images/dog listening.jpg" alt="Dog Listening">
+            <img src="styles/images/doglistening.jpg" alt="Dog Listening">
         </div>
     </main>
     <footer>
