--- a/dog/index.html
+++ b/dog/index.html
@@ -7,29 +7,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Happy Tails Dog Training - Home</title>
 </head>
-<body>
+<nav>
     <div id="content">
     <header> 
+        <div class="top">
         <a id="logo_link" href="index.html">
-            <img class="logo" src="styles/images/logo.png" alt="Happy Tails Logo">
-        </a>
-        <nav>
-        <div class="btn-group">
-            <a href="index.html">"Home"</a>
-            <a href="faq.html">"FAQ"</a>
-            <a href="need.html">"What You Need"</a>
+            <img class="logo" src="styles/images/logo.png" alt="Happy Tails Logo"></a>
+            <a href="index.html">Home</a>
+            <a href="faq.html">FAQ</a>
+            <a href="need.html">What You Need</a>
+            <a href="site-plan.html">Site Plan</a>
         </div>
-        </nav>
     </header>
     </div>
+</nav>
+<body>
     <div id="hero">
         <section id="hero-msg">
             <h1 class="home-title">Happy Tails</h1>
-            <h4>Dog Training</h4>
+            <hr />
         </section>
-        <div id="hero-box">
-            <img class="bordercollie" src="styles/images/border collie.jpg" alt="Border Collie">
-        </div>
     </div>
     <main>
         <p>
@@ -42,7 +39,7 @@
             Your dog is like that car, it is capable of so much. Man’s best friend can learn hundreds of words and can develop an intelligence up to a 2-year-old. If you send your dog off to a training school, they will learn but you won’t know how apply their knowledge. That’s why we would rather have the owner present than the dog. With these online lessons, you will better understand your pet and how to align their actions to your desires. You already have the metaphorical car, and we’re going to teach you how to drive.
         </p>
         <div>
-            <img class="dogface" src="styles/images/dog face.jpg" alt="Dog Face">
+            <img class="dogface" src="styles/images/dogface.jpg" alt="Dog Face">
         </div>
     </main>
     <footer>
