needs page finished

--- a/dog/need.html
+++ b/dog/need.html
@@ -1,68 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/need.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Happy Tails Dog Training - Home</title>
 </head>
 <body>
-    <div id="content">
-    <header> 
-        <a id="logo_link" href="index.html">
-            <img class="logo" src="styles/images/logo.png" alt="Happy Tails Logo">
-        </a>
-        <nav>
-        <div class="btn-group">
-            <a href="index.html"><button>Home</button>
-            <a href="faq.html"><button>FAQ</button>
-            <a href="need.html"><button>What You Need</button>
+    <nav>
+        <div id="content">
+            <header> 
+                <div class="top">
+                <a id="logo_link" href="index.html">
+                    <img class="logo" src="styles/images/logo.png" alt="Happy Tails Logo"></a>
+                    <a href="index.html">Home</a>
+                    <a href="faq.html">FAQ</a>
+                    <a href="need.html">What You Need</a>
+                    <a href="site-plan.html">Site Plan</a>
+                </div>
+            </header>
         </div>
-        </nav>
-    </header>
+    </nav>
     <div id="hero">
-
         <section id="hero-msg">
-            <h1 class="home-title">What You Need</h1>
+            <h1 class="home-title">What You Need to be Successful</h1>
+            <hr />
         </section>
     </div>
     <main>
-        <h1>
-        What you need to be successful
-        </h1>
-        <h4>
-        In order for any of these lessons to work, you need certain things:
-        </h4>
-        <h4>
-        - Time carved out for training
-        </h4>
+
+        <h1>In order for any of these lessons to work, you need certain things:</h1>
+        <ol>
+        <li>Time carved out for training</li>
         <p>If you expect to spend 2 minutes with your dog and see results, you would be wrong. Having a dog is a major commitment, so making time each day for training should be understood. We recommend 15 minutes per session, but if you can only do 5 minutes that is fine if you do it consistently.</p>
-        <h4>
-        - Some sort of reward
-        </h4>
+        <li>Some sort of reward</li>
         <p>We have found over the years that smelly, soft meat treats work the best. It catches most dogs’ attentions, but not always. Learn what your dog likes most. Some dogs would prefer getting their toy as a reward, other’s only want lots of praise from their owner.</p>
-        <h4>
-        A positive attitude
-        </h4>
+        <li>A positive attitude</li>
         <p>If you go into your training session expecting it to be bad, it will be. Dogs pick up on humans’ emotions, so if you are negative your dog knows it. We all have bad days, and if you find yourself having one, just spend a couple minutes working on commands your dog has already mastered. It will keep that time consistency while also making the session a success.</p>
-        <div>
-            <img src="styles/images/doglistening.jpg" alt="Dog Listening">
-        </div>
     </main>
-    <footer>
-        <p>Happy Tails &copy; 20xx - Alison Forsberg</p>
-        <p><a href="site-plan.css">Site Plan</a></p>
-        <p><a href="contactus.html">Contact Us</a></p>
-        <div class="social">
-            <a href="https://facebook.com" target="_blank">
-                <img src="images/facebook.png" alt="fb icon">
-            </a>
-            <a href="https://twitter.com" target="_blank">
-                <img src="images/twitter.png" alt="twitter icon">
-            </a>
-            <a href="https://instagram" target="_blank">
-                <img src="images/instagram.png" alt="instagram icon">
-            </a>
-        </div>
-    </footer>
+</body>
+<footer>
+    <p>Happy Tails &copy; 20xx - Alison Forsberg</p>
+    <p><a href="site-plan.html">Site Plan</a></p>
+    <p><a href="contactus.html">Contact Us</a></p>
+    <div class="social">
+        <a href="https://facebook.com" target="_blank">
+            <img src="styles/images/facebook.png" alt="fb icon">
+        </a>
+        <a href="https://twitter.com" target="_blank">
+            <img src="styles/images/twitter.png" alt="twitter icon">
+        </a>
+        <a href="https://instagram" target="_blank">
+            <img src="styles/images/instagram.png" alt="instagram icon">
+        </a>
+    </div>
+</footer>
