--- a/dog/need.html
+++ b/dog/need.html
@@ -33,11 +33,12 @@
         <h1>In order for any of these lessons to work, you need certain things:</h1>
         <ol>
         <li>Time carved out for training</li>
-        <p>If you expect to spend 2 minutes with your dog and see results, you would be wrong. Having a dog is a major commitment, so making time each day for training should be understood. We recommend 15 minutes per session, but if you can only do 5 minutes that is fine if you do it consistently.</p>
+        <h1>If you expect to spend 2 minutes with your dog and see results, you would be wrong. Having a dog is a major commitment, so making time each day for training should be understood. We recommend 15 minutes per session, but if you can only do 5 minutes that is fine if you do it consistently.</h1>
         <li>Some sort of reward</li>
-        <p>We have found over the years that smelly, soft meat treats work the best. It catches most dogs’ attentions, but not always. Learn what your dog likes most. Some dogs would prefer getting their toy as a reward, other’s only want lots of praise from their owner.</p>
+        <h1>We have found over the years that smelly, soft meat treats work the best. It catches most dogs’ attentions, but not always. Learn what your dog likes most. Some dogs would prefer getting their toy as a reward, other’s only want lots of praise from their owner.</h1>
         <li>A positive attitude</li>
-        <p>If you go into your training session expecting it to be bad, it will be. Dogs pick up on humans’ emotions, so if you are negative your dog knows it. We all have bad days, and if you find yourself having one, just spend a couple minutes working on commands your dog has already mastered. It will keep that time consistency while also making the session a success.</p>
+        <h1>If you go into your training session expecting it to be bad, it will be. Dogs pick up on humans’ emotions, so if you are negative your dog knows it. We all have bad days, and if you find yourself having one, just spend a couple minutes working on commands your dog has already mastered. It will keep that time consistency while also making the session a success.</h1>
+        </ol>
     </main>
 </body>
 <footer>
